// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Common widget tests (Vue InstantSearch) > Breadcrumb widget common tests > options > navigates to a parent category 1`] = `
<div
  class="ais-Breadcrumb"
>
  <ul
    class="ais-Breadcrumb-list"
  >
    <li
      class="ais-Breadcrumb-item"
    >
      <a
        class="ais-Breadcrumb-link"
        href="#"
      >
        Home
      </a>
    </li>
    <li
      class="ais-Breadcrumb-item"
    >
      <span
        aria-hidden="true"
        class="ais-Breadcrumb-separator"
      >
        &gt;
      </span>
      <a
        class="ais-Breadcrumb-link"
        href="#"
      >
        Cameras & Camcorders
      </a>
    </li>
    <li
      class="ais-Breadcrumb-item ais-Breadcrumb-item--selected"
    >
      <span
        aria-hidden="true"
        class="ais-Breadcrumb-separator"
      >
        &gt;
      </span>
      Digital Cameras
    </li>
  </ul>
</div>
`;

exports[`Common widget tests (Vue InstantSearch) > Breadcrumb widget common tests > options > renders with initial refinements 1`] = `
<div
  class="ais-Breadcrumb"
>
  <ul
    class="ais-Breadcrumb-list"
  >
    <li
      class="ais-Breadcrumb-item"
    >
      <a
        class="ais-Breadcrumb-link"
        href="#"
      >
        Home
      </a>
    </li>
    <li
      class="ais-Breadcrumb-item"
    >
      <span
        aria-hidden="true"
        class="ais-Breadcrumb-separator"
      >
        &gt;
      </span>
      <a
        class="ais-Breadcrumb-link"
        href="#"
      >
        Cameras & Camcorders
      </a>
    </li>
    <li
      class="ais-Breadcrumb-item ais-Breadcrumb-item--selected"
    >
      <span
        aria-hidden="true"
        class="ais-Breadcrumb-separator"
      >
        &gt;
      </span>
      Digital Cameras
    </li>
  </ul>
</div>
`;

exports[`Common widget tests (Vue InstantSearch) > Breadcrumb widget common tests > options > renders with required props 1`] = `
<div
  class="ais-Breadcrumb ais-Breadcrumb--noRefinement"
>
  <ul
    class="ais-Breadcrumb-list"
  >
    <li
      class="ais-Breadcrumb-item ais-Breadcrumb-item--selected"
    >
      <a
        class="ais-Breadcrumb-link"
        href="#"
      >
        Home
      </a>
    </li>
  </ul>
</div>
`;

exports[`Common widget tests (Vue InstantSearch) > Breadcrumb widget common tests > options > specifies a custom separator in records 1`] = `
<div
  class="ais-Breadcrumb"
>
  <ul
    class="ais-Breadcrumb-list"
  >
    <li
      class="ais-Breadcrumb-item"
    >
      <a
        class="ais-Breadcrumb-link"
        href="#"
      >
        Home
      </a>
    </li>
    <li
      class="ais-Breadcrumb-item"
    >
      <span
        aria-hidden="true"
        class="ais-Breadcrumb-separator"
      >
        &gt;
      </span>
      <a
        class="ais-Breadcrumb-link"
        href="#"
      >
        Cameras & Camcorders
      </a>
    </li>
    <li
      class="ais-Breadcrumb-item ais-Breadcrumb-item--selected"
    >
      <span
        aria-hidden="true"
        class="ais-Breadcrumb-separator"
      >
        &gt;
      </span>
      Digital Cameras
    </li>
  </ul>
</div>
`;

exports[`Common widget tests (Vue InstantSearch) > Breadcrumb widget common tests > options > transforms the items > 
        [
          "Home",
          ">CAMERAS & CAMCORDERS",
          ">DIGITAL CAMERAS",
        ]
       1`] = `
[
  "Home",
  ">CAMERAS & CAMCORDERS",
  ">DIGITAL CAMERAS",
]
`;

exports[`Common widget tests (Vue InstantSearch) > Breadcrumb widget common tests > options > uses a custom root path 1`] = `
<div
  class="ais-Breadcrumb"
>
  <ul
    class="ais-Breadcrumb-list"
  >
    <li
      class="ais-Breadcrumb-item"
    >
      <a
        class="ais-Breadcrumb-link"
        href="#"
      >
        Home
      </a>
    </li>
    <li
      class="ais-Breadcrumb-item ais-Breadcrumb-item--selected"
    >
      <span
        aria-hidden="true"
        class="ais-Breadcrumb-separator"
      >
        &gt;
      </span>
      Digital Cameras
    </li>
  </ul>
</div>
`;

exports[`Common widget tests (Vue InstantSearch) > ClearRefinements widget common tests > options > clears all refinements 1`] = `
<div
  class="ais-ClearRefinements"
>
  <button
    class="ais-ClearRefinements-button"
  >
    Clear refinements
  </button>
</div>
`;

exports[`Common widget tests (Vue InstantSearch) > ClearRefinements widget common tests > options > clears all refinements 2`] = `
<div
  class="ais-ClearRefinements"
>
  <button
    class="ais-ClearRefinements-button ais-ClearRefinements-button--disabled"
    disabled=""
  >
    Clear refinements
  </button>
</div>
`;

exports[`Common widget tests (Vue InstantSearch) > ClearRefinements widget common tests > options > exclusively restricts what refinements to clear 1`] = `
<div
  class="ais-ClearRefinements"
>
  <button
    class="ais-ClearRefinements-button"
  >
    Clear refinements
  </button>
</div>
`;

exports[`Common widget tests (Vue InstantSearch) > ClearRefinements widget common tests > options > exclusively restricts what refinements to clear 2`] = `
<div
  class="ais-ClearRefinements"
>
  <button
    class="ais-ClearRefinements-button ais-ClearRefinements-button--disabled"
    disabled=""
  >
    Clear refinements
  </button>
</div>
`;

exports[`Common widget tests (Vue InstantSearch) > ClearRefinements widget common tests > options > inclusively restricts what refinements to clear 1`] = `
<div
  class="ais-ClearRefinements"
>
  <button
    class="ais-ClearRefinements-button"
  >
    Clear refinements
  </button>
</div>
`;

exports[`Common widget tests (Vue InstantSearch) > ClearRefinements widget common tests > options > inclusively restricts what refinements to clear 2`] = `
<div
  class="ais-ClearRefinements"
>
  <button
    class="ais-ClearRefinements-button ais-ClearRefinements-button--disabled"
    disabled=""
  >
    Clear refinements
  </button>
</div>
`;

exports[`Common widget tests (Vue InstantSearch) > ClearRefinements widget common tests > options > renders with a disabled button when there are no refinements 1`] = `
<div
  class="ais-ClearRefinements"
>
  <button
    class="ais-ClearRefinements-button ais-ClearRefinements-button--disabled"
    disabled=""
  >
    Clear refinements
  </button>
</div>
`;

exports[`Common widget tests (Vue InstantSearch) > ClearRefinements widget common tests > options > renders with default props 1`] = `
<div
  class="ais-ClearRefinements"
>
  <button
    class="ais-ClearRefinements-button"
  >
    Clear refinements
  </button>
</div>
`;

exports[`Common widget tests (Vue InstantSearch) > ClearRefinements widget common tests > options > restricts what refinements to clear with custom logic 1`] = `
<div
  class="ais-ClearRefinements"
>
  <button
    class="ais-ClearRefinements-button"
  >
    Clear refinements
  </button>
</div>
`;

exports[`Common widget tests (Vue InstantSearch) > ClearRefinements widget common tests > options > restricts what refinements to clear with custom logic 2`] = `
<div
  class="ais-ClearRefinements"
>
  <button
    class="ais-ClearRefinements-button ais-ClearRefinements-button--disabled"
    disabled=""
  >
    Clear refinements
  </button>
</div>
`;

exports[`Common widget tests (Vue InstantSearch) > CurrentRefinements widget common tests > options > renders with no refinements 1`] = `
<div
  class="ais-CurrentRefinements ais-CurrentRefinements--noRefinement"
>
  <ul
    class="ais-CurrentRefinements-list"
  />
</div>
`;

exports[`Common widget tests (Vue InstantSearch) > CurrentRefinements widget common tests > options > renders with refinements 1`] = `
<div
  class="ais-CurrentRefinements"
>
  <ul
    class="ais-CurrentRefinements-list"
  >
    <li
      class="ais-CurrentRefinements-item"
    >
      <span
        class="ais-CurrentRefinements-label"
      >
        Feature: 
      </span>
      <span
        class="ais-CurrentRefinements-category"
      >
        <span
          class="ais-CurrentRefinements-categoryLabel"
        >
          5G
        </span>
        <button
          class="ais-CurrentRefinements-delete"
          type="button"
        >
          ✕
        </button>
      </span>
      <span
        class="ais-CurrentRefinements-category"
      >
        <span
          class="ais-CurrentRefinements-categoryLabel"
        >
          OLED Display
        </span>
        <button
          class="ais-CurrentRefinements-delete"
          type="button"
        >
          ✕
        </button>
      </span>
    </li>
    <li
      class="ais-CurrentRefinements-item"
    >
      <span
        class="ais-CurrentRefinements-label"
      >
        Brand: 
      </span>
      <span
        class="ais-CurrentRefinements-category"
      >
        <span
          class="ais-CurrentRefinements-categoryLabel"
        >
          Samsung
        </span>
        <button
          class="ais-CurrentRefinements-delete"
          type="button"
        >
          ✕
        </button>
      </span>
      <span
        class="ais-CurrentRefinements-category"
      >
        <span
          class="ais-CurrentRefinements-categoryLabel"
        >
          Apple
        </span>
        <button
          class="ais-CurrentRefinements-delete"
          type="button"
        >
          ✕
        </button>
      </span>
    </li>
    <li
      class="ais-CurrentRefinements-item"
    >
      <span
        class="ais-CurrentRefinements-label"
      >
        HierarchicalCategories.lvl0: 
      </span>
      <span
        class="ais-CurrentRefinements-category"
      >
        <span
          class="ais-CurrentRefinements-categoryLabel"
        >
          Cell Phones
        </span>
        <button
          class="ais-CurrentRefinements-delete"
          type="button"
        >
          ✕
        </button>
      </span>
    </li>
    <li
      class="ais-CurrentRefinements-item"
    >
      <span
        class="ais-CurrentRefinements-label"
      >
        Price: 
      </span>
      <span
        class="ais-CurrentRefinements-category"
      >
        <span
          class="ais-CurrentRefinements-categoryLabel"
        >
          ≥ 500
        </span>
        <button
          class="ais-CurrentRefinements-delete"
          type="button"
        >
          ✕
        </button>
      </span>
      <span
        class="ais-CurrentRefinements-category"
      >
        <span
          class="ais-CurrentRefinements-categoryLabel"
        >
          ≤ 990
        </span>
        <button
          class="ais-CurrentRefinements-delete"
          type="button"
        >
          ✕
        </button>
      </span>
    </li>
  </ul>
</div>
`;

exports[`Common widget tests (Vue InstantSearch) > HierarchicalMenu widget common tests > options > limits the number of items to display 1`] = `
<div
  class="ais-HierarchicalMenu"
>
  <ul
    class="ais-HierarchicalMenu-list"
  >
    <li
      class="ais-HierarchicalMenu-item"
    >
      <a
        class="ais-HierarchicalMenu-link"
        href="#"
      >
        <span
          class="ais-HierarchicalMenu-label"
        >
          Cameras & Camcorders
        </span>
        <span
          class="ais-HierarchicalMenu-count"
        >
          1369
        </span>
      </a>
    </li>
  </ul>
</div>
`;

exports[`Common widget tests (Vue InstantSearch) > HierarchicalMenu widget common tests > options > renders with a custom \`rootPath\` 1`] = `
<div
  class="ais-HierarchicalMenu"
>
  <ul
    class="ais-HierarchicalMenu-list"
  >
    <li
      class="ais-HierarchicalMenu-item"
    >
      <a
        class="ais-HierarchicalMenu-link"
        href="#"
      >
        <span
          class="ais-HierarchicalMenu-label"
        >
          Digital Cameras
        </span>
        <span
          class="ais-HierarchicalMenu-count"
        >
          170
        </span>
      </a>
    </li>
    <li
      class="ais-HierarchicalMenu-item"
    >
      <a
        class="ais-HierarchicalMenu-link"
        href="#"
      >
        <span
          class="ais-HierarchicalMenu-label"
        >
          Memory Cards
        </span>
        <span
          class="ais-HierarchicalMenu-count"
        >
          113
        </span>
      </a>
    </li>
  </ul>
</div>
`;

exports[`Common widget tests (Vue InstantSearch) > HierarchicalMenu widget common tests > options > renders with a custom \`rootPath\` 2`] = `
<div
  class="ais-HierarchicalMenu"
>
  <ul
    class="ais-HierarchicalMenu-list"
  >
    <li
      class="ais-HierarchicalMenu-item ais-HierarchicalMenu-item--selected ais-HierarchicalMenu-item--parent"
    >
      <a
        class="ais-HierarchicalMenu-link ais-HierarchicalMenu-link--selected"
        href="#"
      >
        <span
          class="ais-HierarchicalMenu-label"
        >
          Digital Cameras
        </span>
        <span
          class="ais-HierarchicalMenu-count"
        >
          170
        </span>
      </a>
      <ul
        class="ais-HierarchicalMenu-list ais-HierarchicalMenu-list--child"
      >
        <li
          class="ais-HierarchicalMenu-item"
        >
          <a
            class="ais-HierarchicalMenu-link"
            href="#"
          >
            <span
              class="ais-HierarchicalMenu-label"
            >
              Digital SLR Cameras
            </span>
            <span
              class="ais-HierarchicalMenu-count"
            >
              23
            </span>
          </a>
        </li>
        <li
          class="ais-HierarchicalMenu-item"
        >
          <a
            class="ais-HierarchicalMenu-link"
            href="#"
          >
            <span
              class="ais-HierarchicalMenu-label"
            >
              Mirrorless Cameras
            </span>
            <span
              class="ais-HierarchicalMenu-count"
            >
              37
            </span>
          </a>
        </li>
      </ul>
    </li>
    <li
      class="ais-HierarchicalMenu-item"
    >
      <a
        class="ais-HierarchicalMenu-link"
        href="#"
      >
        <span
          class="ais-HierarchicalMenu-label"
        >
          Memory Cards
        </span>
        <span
          class="ais-HierarchicalMenu-count"
        >
          113
        </span>
      </a>
    </li>
  </ul>
</div>
`;

exports[`Common widget tests (Vue InstantSearch) > HierarchicalMenu widget common tests > options > renders with props 1`] = `
<div
  class="ais-HierarchicalMenu"
>
  <ul
    class="ais-HierarchicalMenu-list"
  >
    <li
      class="ais-HierarchicalMenu-item"
    >
      <a
        class="ais-HierarchicalMenu-link"
        href="#"
      >
        <span
          class="ais-HierarchicalMenu-label"
        >
          Cameras & Camcorders
        </span>
        <span
          class="ais-HierarchicalMenu-count"
        >
          1369
        </span>
      </a>
    </li>
    <li
      class="ais-HierarchicalMenu-item"
    >
      <a
        class="ais-HierarchicalMenu-link"
        href="#"
      >
        <span
          class="ais-HierarchicalMenu-label"
        >
          Video Games
        </span>
        <span
          class="ais-HierarchicalMenu-count"
        >
          505
        </span>
      </a>
    </li>
    <li
      class="ais-HierarchicalMenu-item"
    >
      <a
        class="ais-HierarchicalMenu-link"
        href="#"
      >
        <span
          class="ais-HierarchicalMenu-label"
        >
          Wearable Technology
        </span>
        <span
          class="ais-HierarchicalMenu-count"
        >
          271
        </span>
      </a>
    </li>
  </ul>
</div>
`;

exports[`Common widget tests (Vue InstantSearch) > HierarchicalMenu widget common tests > options > show more > displays a "Show more" button 1`] = `
<div
  class="ais-HierarchicalMenu"
>
  <ul
    class="ais-HierarchicalMenu-list"
  >
    <li
      class="ais-HierarchicalMenu-item"
    >
      <a
        class="ais-HierarchicalMenu-link"
        href="#"
      >
        <span
          class="ais-HierarchicalMenu-label"
        >
          Cameras & Camcorders
        </span>
        <span
          class="ais-HierarchicalMenu-count"
        >
          1369
        </span>
      </a>
    </li>
  </ul>
  <button
    class="ais-HierarchicalMenu-showMore"
  >
    Show more
  </button>
</div>
`;

exports[`Common widget tests (Vue InstantSearch) > HierarchicalMenu widget common tests > options > takes a custom \`separator\` 1`] = `
<li
  class="ais-HierarchicalMenu-item ais-HierarchicalMenu-item--selected ais-HierarchicalMenu-item--parent"
>
  <a
    class="ais-HierarchicalMenu-link ais-HierarchicalMenu-link--selected"
    href="#"
  >
    <span
      class="ais-HierarchicalMenu-label"
    >
      Cameras & Camcorders
    </span>
    <span
      class="ais-HierarchicalMenu-count"
    >
      1369
    </span>
  </a>
  <ul
    class="ais-HierarchicalMenu-list ais-HierarchicalMenu-list--child"
  >
    <li
      class="ais-HierarchicalMenu-item"
    >
      <a
        class="ais-HierarchicalMenu-link"
        href="#"
      >
        <span
          class="ais-HierarchicalMenu-label"
        >
          Digital Cameras
        </span>
        <span
          class="ais-HierarchicalMenu-count"
        >
          170
        </span>
      </a>
    </li>
    <li
      class="ais-HierarchicalMenu-item"
    >
      <a
        class="ais-HierarchicalMenu-link"
        href="#"
      >
        <span
          class="ais-HierarchicalMenu-label"
        >
          Memory Cards
        </span>
        <span
          class="ais-HierarchicalMenu-count"
        >
          113
        </span>
      </a>
    </li>
  </ul>
</li>
`;

exports[`Common widget tests (Vue InstantSearch) > Hits widget common tests > options > common rendering > renders with no results 1`] = `
<div
  class="ais-Hits ais-Hits--empty"
>
  <ol
    class="ais-Hits-list"
  />
</div>
`;

exports[`Common widget tests (Vue InstantSearch) > Hits widget common tests > options > renders default banner element with banner widget renderingContent 1`] = `
<div
  class="ais-Hits"
>
  <aside
    class="ais-Hits-banner"
  >
    <a
      class="ais-Hits-banner-link"
      href="https://www.algolia.com"
    >
      <img
        class="ais-Hits-banner-image"
        src="https://via.placeholder.com/550x250"
      />
    </a>
  </aside>
  <ol
    class="ais-Hits-list"
  >
    <li
      class="ais-Hits-item"
    >
      {"objectID":"1"}
    </li>
    <li
      class="ais-Hits-item"
    >
      {"objectID":"2"}
    </li>
  </ol>
</div>
`;

exports[`Common widget tests (Vue InstantSearch) > Hits widget common tests > options > renders transformed items 1`] = `
<div
  class="ais-Hits"
>
  <ol
    class="ais-Hits-list"
  >
    <li
      class="ais-Hits-item"
    >
      {"objectID":"(1)"}
    </li>
    <li
      class="ais-Hits-item"
    >
      {"objectID":"(2)"}
    </li>
  </ol>
</div>
`;

exports[`Common widget tests (Vue InstantSearch) > Hits widget common tests > options > renders with default props 1`] = `
<div
  class="ais-Hits"
>
  <ol
    class="ais-Hits-list"
  >
    <li
      class="ais-Hits-item"
    >
      {"objectID":"1"}
    </li>
    <li
      class="ais-Hits-item"
    >
      {"objectID":"2"}
    </li>
  </ol>
</div>
`;

exports[`Common widget tests (Vue InstantSearch) > HitsPerPage widget common tests > options > renders with required props 1`] = `
<div
  class="ais-HitsPerPage"
>
  <select
    class="ais-HitsPerPage-select"
  >
    <option
      class="ais-HitsPerPage-option"
      value="10"
    >
      10
    </option>
    <option
      class="ais-HitsPerPage-option"
      value="20"
    >
      20
    </option>
    <option
      class="ais-HitsPerPage-option"
      value="30"
    >
      30
    </option>
  </select>
</div>
`;

exports[`Common widget tests (Vue InstantSearch) > HitsPerPage widget common tests > options > renders with required props 2`] = `
<div
  class="ais-HitsPerPage"
>
  <select
    class="ais-HitsPerPage-select"
  >
    <option
      class="ais-HitsPerPage-option"
      value="10"
    >
      10
    </option>
    <option
      class="ais-HitsPerPage-option"
      value="20"
    >
      20
    </option>
    <option
      class="ais-HitsPerPage-option"
      value="30"
    >
      30
    </option>
  </select>
</div>
`;

exports[`Common widget tests (Vue InstantSearch) > InfiniteHits widget common tests > options > reads hits from cache 1`] = `
<div
  class="ais-InfiniteHits"
>
  <ol
    class="ais-InfiniteHits-list"
  >
    <li
      class="ais-InfiniteHits-item"
    >
      {"objectID":"one"}
    </li>
    <li
      class="ais-InfiniteHits-item"
    >
      {"objectID":"two"}
    </li>
    <li
      class="ais-InfiniteHits-item"
    >
      {"objectID":"three"}
    </li>
  </ol>
  <button
    class="ais-InfiniteHits-loadMore"
  >
    Show more results
  </button>
</div>
`;

exports[`Common widget tests (Vue InstantSearch) > InfiniteHits widget common tests > options > renders default banner element with banner widget renderingContent 1`] = `
<div
  class="ais-InfiniteHits"
>
  <aside
    class="ais-InfiniteHits-banner"
  >
    <a
      class="ais-InfiniteHits-banner-link"
      href="https://www.algolia.com"
    >
      <img
        class="ais-InfiniteHits-banner-image"
        src="https://via.placeholder.com/550x250"
      />
    </a>
  </aside>
  <ol
    class="ais-InfiniteHits-list"
  >
    <li
      class="ais-InfiniteHits-item"
    >
      {"objectID":"0"}
    </li>
    <li
      class="ais-InfiniteHits-item"
    >
      {"objectID":"1"}
    </li>
    <li
      class="ais-InfiniteHits-item"
    >
      {"objectID":"2"}
    </li>
  </ol>
  <button
    class="ais-InfiniteHits-loadMore"
  >
    Show more results
  </button>
</div>
`;

exports[`Common widget tests (Vue InstantSearch) > InfiniteHits widget common tests > options > renders transformed items 1`] = `
<div
  class="ais-InfiniteHits"
>
  <ol
    class="ais-InfiniteHits-list"
  >
    <li
      class="ais-InfiniteHits-item"
    >
      {"objectID":"(0)"}
    </li>
    <li
      class="ais-InfiniteHits-item"
    >
      {"objectID":"(1)"}
    </li>
    <li
      class="ais-InfiniteHits-item"
    >
      {"objectID":"(2)"}
    </li>
  </ol>
  <button
    class="ais-InfiniteHits-loadMore"
  >
    Show more results
  </button>
</div>
`;

exports[`Common widget tests (Vue InstantSearch) > InfiniteHits widget common tests > options > renders with default props 1`] = `
<div
  class="ais-InfiniteHits"
>
  <ol
    class="ais-InfiniteHits-list"
  >
    <li
      class="ais-InfiniteHits-item"
    >
      {"objectID":"0"}
    </li>
    <li
      class="ais-InfiniteHits-item"
    >
      {"objectID":"1"}
    </li>
    <li
      class="ais-InfiniteHits-item"
    >
      {"objectID":"2"}
    </li>
  </ol>
  <button
    class="ais-InfiniteHits-loadMore"
  >
    Show more results
  </button>
</div>
`;

exports[`Common widget tests (Vue InstantSearch) > Menu widget common tests > options > limits the number of items to display 1`] = `
<div
  class="ais-Menu"
>
  <ul
    class="ais-Menu-list"
  >
    <li
      class="ais-Menu-item"
    >
      <a
        class="ais-Menu-link"
        href="#"
      >
        <span
          class="ais-Menu-label"
        >
          Insignia™
        </span>
        <span
          class="ais-Menu-count"
        >
          746
        </span>
      </a>
    </li>
    <li
      class="ais-Menu-item"
    >
      <a
        class="ais-Menu-link"
        href="#"
      >
        <span
          class="ais-Menu-label"
        >
          Samsung
        </span>
        <span
          class="ais-Menu-count"
        >
          633
        </span>
      </a>
    </li>
  </ul>
</div>
`;

exports[`Common widget tests (Vue InstantSearch) > Menu widget common tests > options > renders with props 1`] = `
<div
  class="ais-Menu"
>
  <ul
    class="ais-Menu-list"
  >
    <li
      class="ais-Menu-item"
    >
      <a
        class="ais-Menu-link"
        href="#"
      >
        <span
          class="ais-Menu-label"
        >
          Insignia™
        </span>
        <span
          class="ais-Menu-count"
        >
          746
        </span>
      </a>
    </li>
    <li
      class="ais-Menu-item"
    >
      <a
        class="ais-Menu-link"
        href="#"
      >
        <span
          class="ais-Menu-label"
        >
          Samsung
        </span>
        <span
          class="ais-Menu-count"
        >
          633
        </span>
      </a>
    </li>
    <li
      class="ais-Menu-item"
    >
      <a
        class="ais-Menu-link"
        href="#"
      >
        <span
          class="ais-Menu-label"
        >
          Metra
        </span>
        <span
          class="ais-Menu-count"
        >
          591
        </span>
      </a>
    </li>
    <li
      class="ais-Menu-item"
    >
      <a
        class="ais-Menu-link"
        href="#"
      >
        <span
          class="ais-Menu-label"
        >
          HP
        </span>
        <span
          class="ais-Menu-count"
        >
          530
        </span>
      </a>
    </li>
  </ul>
</div>
`;

exports[`Common widget tests (Vue InstantSearch) > Menu widget common tests > options > show more / less > displays a "Show more" button 1`] = `
<div
  class="ais-Menu"
>
  <ul
    class="ais-Menu-list"
  >
    <li
      class="ais-Menu-item"
    >
      <a
        class="ais-Menu-link"
        href="#"
      >
        <span
          class="ais-Menu-label"
        >
          Insignia™
        </span>
        <span
          class="ais-Menu-count"
        >
          746
        </span>
      </a>
    </li>
    <li
      class="ais-Menu-item"
    >
      <a
        class="ais-Menu-link"
        href="#"
      >
        <span
          class="ais-Menu-label"
        >
          Samsung
        </span>
        <span
          class="ais-Menu-count"
        >
          633
        </span>
      </a>
    </li>
  </ul>
  <button
    class="ais-Menu-showMore"
  >
    Show more
  </button>
</div>
`;

exports[`Common widget tests (Vue InstantSearch) > MenuSelect widget common tests > options > renders with props 1`] = `
<select
  class="ais-MenuSelect-select"
>
  <option
    class="ais-MenuSelect-option"
    value=""
  >
    See all
  </option>
  <option
    class="ais-MenuSelect-option"
    value="HP"
  >
    HP (530)
  </option>
  <option
    class="ais-MenuSelect-option"
    value="Insignia™"
  >
    Insignia™ (746)
  </option>
  <option
    class="ais-MenuSelect-option"
    value="Metra"
  >
    Metra (591)
  </option>
  <option
    class="ais-MenuSelect-option"
    value="Samsung"
  >
    Samsung (633)
  </option>
</select>
`;

exports[`Common widget tests (Vue InstantSearch) > NumericMenu widget common tests > options > renders with props 1`] = `
<div
  class="ais-NumericMenu"
>
  <ul
    class="ais-NumericMenu-list"
  >
    <li
      class="ais-NumericMenu-item ais-NumericMenu-item--selected"
    >
      <label
        class="ais-NumericMenu-label"
      >
        <input
          class="ais-NumericMenu-radio"
          name="price"
          type="radio"
        />
        <span
          class="ais-NumericMenu-labelText"
        >
          All
        </span>
      </label>
    </li>
    <li
      class="ais-NumericMenu-item"
    >
      <label
        class="ais-NumericMenu-label"
      >
        <input
          class="ais-NumericMenu-radio"
          name="price"
          type="radio"
        />
        <span
          class="ais-NumericMenu-labelText"
        >
          Less than 500$
        </span>
      </label>
    </li>
    <li
      class="ais-NumericMenu-item"
    >
      <label
        class="ais-NumericMenu-label"
      >
        <input
          class="ais-NumericMenu-radio"
          name="price"
          type="radio"
        />
        <span
          class="ais-NumericMenu-labelText"
        >
          Between 500$ - 1000$
        </span>
      </label>
    </li>
    <li
      class="ais-NumericMenu-item"
    >
      <label
        class="ais-NumericMenu-label"
      >
        <input
          class="ais-NumericMenu-radio"
          name="price"
          type="radio"
        />
        <span
          class="ais-NumericMenu-labelText"
        >
          More than 1000$
        </span>
      </label>
    </li>
  </ul>
</div>
`;

exports[`Common widget tests (Vue InstantSearch) > Pagination widget common tests > options > adds items around the current one 1`] = `
<div
  class="ais-Pagination"
>
  <ul
    class="ais-Pagination-list"
  >
    <li
      class="ais-Pagination-item ais-Pagination-item--disabled ais-Pagination-item--firstPage"
    >
      <span
        aria-label="First Page"
        class="ais-Pagination-link"
      >
        ‹‹
      </span>
    </li>
    <li
      class="ais-Pagination-item ais-Pagination-item--disabled ais-Pagination-item--previousPage"
    >
      <span
        aria-label="Previous Page"
        class="ais-Pagination-link"
      >
        ‹
      </span>
    </li>
    <li
      class="ais-Pagination-item ais-Pagination-item--page ais-Pagination-item--selected"
    >
      <a
        aria-label="Page 1"
        class="ais-Pagination-link"
        href="#"
      >
        1
      </a>
    </li>
    <li
      class="ais-Pagination-item ais-Pagination-item--page"
    >
      <a
        aria-label="Page 2"
        class="ais-Pagination-link"
        href="#"
      >
        2
      </a>
    </li>
    <li
      class="ais-Pagination-item ais-Pagination-item--page"
    >
      <a
        aria-label="Page 3"
        class="ais-Pagination-link"
        href="#"
      >
        3
      </a>
    </li>
    <li
      class="ais-Pagination-item ais-Pagination-item--page"
    >
      <a
        aria-label="Page 4"
        class="ais-Pagination-link"
        href="#"
      >
        4
      </a>
    </li>
    <li
      class="ais-Pagination-item ais-Pagination-item--page"
    >
      <a
        aria-label="Page 5"
        class="ais-Pagination-link"
        href="#"
      >
        5
      </a>
    </li>
    <li
      class="ais-Pagination-item ais-Pagination-item--page"
    >
      <a
        aria-label="Page 6"
        class="ais-Pagination-link"
        href="#"
      >
        6
      </a>
    </li>
    <li
      class="ais-Pagination-item ais-Pagination-item--page"
    >
      <a
        aria-label="Page 7"
        class="ais-Pagination-link"
        href="#"
      >
        7
      </a>
    </li>
    <li
      class="ais-Pagination-item ais-Pagination-item--page"
    >
      <a
        aria-label="Page 8"
        class="ais-Pagination-link"
        href="#"
      >
        8
      </a>
    </li>
    <li
      class="ais-Pagination-item ais-Pagination-item--page"
    >
      <a
        aria-label="Page 9"
        class="ais-Pagination-link"
        href="#"
      >
        9
      </a>
    </li>
    <li
      class="ais-Pagination-item ais-Pagination-item--nextPage"
    >
      <a
        aria-label="Next Page"
        class="ais-Pagination-link"
        href="#"
      >
        ›
      </a>
    </li>
    <li
      class="ais-Pagination-item ais-Pagination-item--lastPage"
    >
      <a
        aria-label="Last Page, Page 50"
        class="ais-Pagination-link"
        href="#"
      >
        ››
      </a>
    </li>
  </ul>
</div>
`;

exports[`Common widget tests (Vue InstantSearch) > Pagination widget common tests > options > does not add items around the current one when there are not enough pages 1`] = `
<div
  class="ais-Pagination"
>
  <ul
    class="ais-Pagination-list"
  >
    <li
      class="ais-Pagination-item ais-Pagination-item--disabled ais-Pagination-item--firstPage"
    >
      <span
        aria-label="First Page"
        class="ais-Pagination-link"
      >
        ‹‹
      </span>
    </li>
    <li
      class="ais-Pagination-item ais-Pagination-item--disabled ais-Pagination-item--previousPage"
    >
      <span
        aria-label="Previous Page"
        class="ais-Pagination-link"
      >
        ‹
      </span>
    </li>
    <li
      class="ais-Pagination-item ais-Pagination-item--page ais-Pagination-item--selected"
    >
      <a
        aria-label="Page 1"
        class="ais-Pagination-link"
        href="#"
      >
        1
      </a>
    </li>
    <li
      class="ais-Pagination-item ais-Pagination-item--page"
    >
      <a
        aria-label="Page 2"
        class="ais-Pagination-link"
        href="#"
      >
        2
      </a>
    </li>
    <li
      class="ais-Pagination-item ais-Pagination-item--page"
    >
      <a
        aria-label="Page 3"
        class="ais-Pagination-link"
        href="#"
      >
        3
      </a>
    </li>
    <li
      class="ais-Pagination-item ais-Pagination-item--page"
    >
      <a
        aria-label="Page 4"
        class="ais-Pagination-link"
        href="#"
      >
        4
      </a>
    </li>
    <li
      class="ais-Pagination-item ais-Pagination-item--page"
    >
      <a
        aria-label="Page 5"
        class="ais-Pagination-link"
        href="#"
      >
        5
      </a>
    </li>
    <li
      class="ais-Pagination-item ais-Pagination-item--page"
    >
      <a
        aria-label="Page 6"
        class="ais-Pagination-link"
        href="#"
      >
        6
      </a>
    </li>
    <li
      class="ais-Pagination-item ais-Pagination-item--nextPage"
    >
      <a
        aria-label="Next Page"
        class="ais-Pagination-link"
        href="#"
      >
        ›
      </a>
    </li>
    <li
      class="ais-Pagination-item ais-Pagination-item--lastPage"
    >
      <a
        aria-label="Last Page, Page 6"
        class="ais-Pagination-link"
        href="#"
      >
        ››
      </a>
    </li>
  </ul>
</div>
`;

exports[`Common widget tests (Vue InstantSearch) > Pagination widget common tests > options > hides the "First" item when \`showFirst\` is \`false\` 1`] = `
<div
  class="ais-Pagination ais-Pagination--noRefinement"
>
  <ul
    class="ais-Pagination-list"
  >
    <li
      class="ais-Pagination-item ais-Pagination-item--disabled ais-Pagination-item--previousPage"
    >
      <span
        aria-label="Previous Page"
        class="ais-Pagination-link"
      >
        ‹
      </span>
    </li>
    <li
      class="ais-Pagination-item ais-Pagination-item--page ais-Pagination-item--selected"
    >
      <a
        aria-label="Page 1"
        class="ais-Pagination-link"
        href="#"
      >
        1
      </a>
    </li>
    <li
      class="ais-Pagination-item ais-Pagination-item--disabled ais-Pagination-item--nextPage"
    >
      <span
        aria-label="Next Page"
        class="ais-Pagination-link"
      >
        ›
      </span>
    </li>
    <li
      class="ais-Pagination-item ais-Pagination-item--disabled ais-Pagination-item--lastPage"
    >
      <span
        aria-label="Last Page, Page 0"
        class="ais-Pagination-link"
      >
        ››
      </span>
    </li>
  </ul>
</div>
`;

exports[`Common widget tests (Vue InstantSearch) > Pagination widget common tests > options > hides the "Last" item when \`showLast\` is \`false\` 1`] = `
<div
  class="ais-Pagination ais-Pagination--noRefinement"
>
  <ul
    class="ais-Pagination-list"
  >
    <li
      class="ais-Pagination-item ais-Pagination-item--disabled ais-Pagination-item--firstPage"
    >
      <span
        aria-label="First Page"
        class="ais-Pagination-link"
      >
        ‹‹
      </span>
    </li>
    <li
      class="ais-Pagination-item ais-Pagination-item--disabled ais-Pagination-item--previousPage"
    >
      <span
        aria-label="Previous Page"
        class="ais-Pagination-link"
      >
        ‹
      </span>
    </li>
    <li
      class="ais-Pagination-item ais-Pagination-item--page ais-Pagination-item--selected"
    >
      <a
        aria-label="Page 1"
        class="ais-Pagination-link"
        href="#"
      >
        1
      </a>
    </li>
    <li
      class="ais-Pagination-item ais-Pagination-item--disabled ais-Pagination-item--nextPage"
    >
      <span
        aria-label="Next Page"
        class="ais-Pagination-link"
      >
        ›
      </span>
    </li>
  </ul>
</div>
`;

exports[`Common widget tests (Vue InstantSearch) > Pagination widget common tests > options > hides the "Next" item when \`showNext\` is \`false\` 1`] = `
<div
  class="ais-Pagination ais-Pagination--noRefinement"
>
  <ul
    class="ais-Pagination-list"
  >
    <li
      class="ais-Pagination-item ais-Pagination-item--disabled ais-Pagination-item--firstPage"
    >
      <span
        aria-label="First Page"
        class="ais-Pagination-link"
      >
        ‹‹
      </span>
    </li>
    <li
      class="ais-Pagination-item ais-Pagination-item--disabled ais-Pagination-item--previousPage"
    >
      <span
        aria-label="Previous Page"
        class="ais-Pagination-link"
      >
        ‹
      </span>
    </li>
    <li
      class="ais-Pagination-item ais-Pagination-item--page ais-Pagination-item--selected"
    >
      <a
        aria-label="Page 1"
        class="ais-Pagination-link"
        href="#"
      >
        1
      </a>
    </li>
    <li
      class="ais-Pagination-item ais-Pagination-item--disabled ais-Pagination-item--lastPage"
    >
      <span
        aria-label="Last Page, Page 0"
        class="ais-Pagination-link"
      >
        ››
      </span>
    </li>
  </ul>
</div>
`;

exports[`Common widget tests (Vue InstantSearch) > Pagination widget common tests > options > hides the "Previous" item when \`showPrevious\` is \`false\` 1`] = `
<div
  class="ais-Pagination ais-Pagination--noRefinement"
>
  <ul
    class="ais-Pagination-list"
  >
    <li
      class="ais-Pagination-item ais-Pagination-item--disabled ais-Pagination-item--firstPage"
    >
      <span
        aria-label="First Page"
        class="ais-Pagination-link"
      >
        ‹‹
      </span>
    </li>
    <li
      class="ais-Pagination-item ais-Pagination-item--page ais-Pagination-item--selected"
    >
      <a
        aria-label="Page 1"
        class="ais-Pagination-link"
        href="#"
      >
        1
      </a>
    </li>
    <li
      class="ais-Pagination-item ais-Pagination-item--disabled ais-Pagination-item--nextPage"
    >
      <span
        aria-label="Next Page"
        class="ais-Pagination-link"
      >
        ›
      </span>
    </li>
    <li
      class="ais-Pagination-item ais-Pagination-item--disabled ais-Pagination-item--lastPage"
    >
      <span
        aria-label="Last Page, Page 0"
        class="ais-Pagination-link"
      >
        ››
      </span>
    </li>
  </ul>
</div>
`;

exports[`Common widget tests (Vue InstantSearch) > Pagination widget common tests > options > limits the total pages to display 1`] = `
<div
  class="ais-Pagination"
>
  <ul
    class="ais-Pagination-list"
  >
    <li
      class="ais-Pagination-item ais-Pagination-item--disabled ais-Pagination-item--firstPage"
    >
      <span
        aria-label="First Page"
        class="ais-Pagination-link"
      >
        ‹‹
      </span>
    </li>
    <li
      class="ais-Pagination-item ais-Pagination-item--disabled ais-Pagination-item--previousPage"
    >
      <span
        aria-label="Previous Page"
        class="ais-Pagination-link"
      >
        ‹
      </span>
    </li>
    <li
      class="ais-Pagination-item ais-Pagination-item--page ais-Pagination-item--selected"
    >
      <a
        aria-label="Page 1"
        class="ais-Pagination-link"
        href="#"
      >
        1
      </a>
    </li>
    <li
      class="ais-Pagination-item ais-Pagination-item--page"
    >
      <a
        aria-label="Page 2"
        class="ais-Pagination-link"
        href="#"
      >
        2
      </a>
    </li>
    <li
      class="ais-Pagination-item ais-Pagination-item--page"
    >
      <a
        aria-label="Page 3"
        class="ais-Pagination-link"
        href="#"
      >
        3
      </a>
    </li>
    <li
      class="ais-Pagination-item ais-Pagination-item--page"
    >
      <a
        aria-label="Page 4"
        class="ais-Pagination-link"
        href="#"
      >
        4
      </a>
    </li>
    <li
      class="ais-Pagination-item ais-Pagination-item--nextPage"
    >
      <a
        aria-label="Next Page"
        class="ais-Pagination-link"
        href="#"
      >
        ›
      </a>
    </li>
    <li
      class="ais-Pagination-item ais-Pagination-item--lastPage"
    >
      <a
        aria-label="Last Page, Page 4"
        class="ais-Pagination-link"
        href="#"
      >
        ››
      </a>
    </li>
  </ul>
</div>
`;

exports[`Common widget tests (Vue InstantSearch) > Pagination widget common tests > options > navigates between pages 1`] = `
<div
  class="ais-Pagination"
>
  <ul
    class="ais-Pagination-list"
  >
    <li
      class="ais-Pagination-item ais-Pagination-item--disabled ais-Pagination-item--firstPage"
    >
      <span
        aria-label="First Page"
        class="ais-Pagination-link"
      >
        ‹‹
      </span>
    </li>
    <li
      class="ais-Pagination-item ais-Pagination-item--disabled ais-Pagination-item--previousPage"
    >
      <span
        aria-label="Previous Page"
        class="ais-Pagination-link"
      >
        ‹
      </span>
    </li>
    <li
      class="ais-Pagination-item ais-Pagination-item--page ais-Pagination-item--selected"
    >
      <a
        aria-label="Page 1"
        class="ais-Pagination-link"
        href="#"
      >
        1
      </a>
    </li>
    <li
      class="ais-Pagination-item ais-Pagination-item--page"
    >
      <a
        aria-label="Page 2"
        class="ais-Pagination-link"
        href="#"
      >
        2
      </a>
    </li>
    <li
      class="ais-Pagination-item ais-Pagination-item--page"
    >
      <a
        aria-label="Page 3"
        class="ais-Pagination-link"
        href="#"
      >
        3
      </a>
    </li>
    <li
      class="ais-Pagination-item ais-Pagination-item--page"
    >
      <a
        aria-label="Page 4"
        class="ais-Pagination-link"
        href="#"
      >
        4
      </a>
    </li>
    <li
      class="ais-Pagination-item ais-Pagination-item--page"
    >
      <a
        aria-label="Page 5"
        class="ais-Pagination-link"
        href="#"
      >
        5
      </a>
    </li>
    <li
      class="ais-Pagination-item ais-Pagination-item--page"
    >
      <a
        aria-label="Page 6"
        class="ais-Pagination-link"
        href="#"
      >
        6
      </a>
    </li>
    <li
      class="ais-Pagination-item ais-Pagination-item--page"
    >
      <a
        aria-label="Page 7"
        class="ais-Pagination-link"
        href="#"
      >
        7
      </a>
    </li>
    <li
      class="ais-Pagination-item ais-Pagination-item--nextPage"
    >
      <a
        aria-label="Next Page"
        class="ais-Pagination-link"
        href="#"
      >
        ›
      </a>
    </li>
    <li
      class="ais-Pagination-item ais-Pagination-item--lastPage"
    >
      <a
        aria-label="Last Page, Page 50"
        class="ais-Pagination-link"
        href="#"
      >
        ››
      </a>
    </li>
  </ul>
</div>
`;

exports[`Common widget tests (Vue InstantSearch) > Pagination widget common tests > options > renders with default props 1`] = `
<div
  class="ais-Pagination"
>
  <ul
    class="ais-Pagination-list"
  >
    <li
      class="ais-Pagination-item ais-Pagination-item--disabled ais-Pagination-item--firstPage"
    >
      <span
        aria-label="First Page"
        class="ais-Pagination-link"
      >
        ‹‹
      </span>
    </li>
    <li
      class="ais-Pagination-item ais-Pagination-item--disabled ais-Pagination-item--previousPage"
    >
      <span
        aria-label="Previous Page"
        class="ais-Pagination-link"
      >
        ‹
      </span>
    </li>
    <li
      class="ais-Pagination-item ais-Pagination-item--page ais-Pagination-item--selected"
    >
      <a
        aria-label="Page 1"
        class="ais-Pagination-link"
        href="#"
      >
        1
      </a>
    </li>
    <li
      class="ais-Pagination-item ais-Pagination-item--page"
    >
      <a
        aria-label="Page 2"
        class="ais-Pagination-link"
        href="#"
      >
        2
      </a>
    </li>
    <li
      class="ais-Pagination-item ais-Pagination-item--page"
    >
      <a
        aria-label="Page 3"
        class="ais-Pagination-link"
        href="#"
      >
        3
      </a>
    </li>
    <li
      class="ais-Pagination-item ais-Pagination-item--page"
    >
      <a
        aria-label="Page 4"
        class="ais-Pagination-link"
        href="#"
      >
        4
      </a>
    </li>
    <li
      class="ais-Pagination-item ais-Pagination-item--page"
    >
      <a
        aria-label="Page 5"
        class="ais-Pagination-link"
        href="#"
      >
        5
      </a>
    </li>
    <li
      class="ais-Pagination-item ais-Pagination-item--page"
    >
      <a
        aria-label="Page 6"
        class="ais-Pagination-link"
        href="#"
      >
        6
      </a>
    </li>
    <li
      class="ais-Pagination-item ais-Pagination-item--page"
    >
      <a
        aria-label="Page 7"
        class="ais-Pagination-link"
        href="#"
      >
        7
      </a>
    </li>
    <li
      class="ais-Pagination-item ais-Pagination-item--nextPage"
    >
      <a
        aria-label="Next Page"
        class="ais-Pagination-link"
        href="#"
      >
        ›
      </a>
    </li>
    <li
      class="ais-Pagination-item ais-Pagination-item--lastPage"
    >
      <a
        aria-label="Last Page, Page 50"
        class="ais-Pagination-link"
        href="#"
      >
        ››
      </a>
    </li>
  </ul>
</div>
`;

exports[`Common widget tests (Vue InstantSearch) > PoweredBy widget common tests > options > dark theme 1`] = `
<div
  class="ais-PoweredBy ais-PoweredBy--dark"
>
  <a
    aria-label="Search by Algolia"
    class="ais-PoweredBy-link"
    href="https://www.algolia.com/?utm_source=LIBRARY&utm_medium=website&utm_content=localhost&utm_campaign=poweredby"
    rel="noopener"
    target="_blank"
  >
    <svg
      class="ais-PoweredBy-logo"
      viewBox="0 0 572 64"
    >
      <path
        d="M16 48.3c-3.4 0-6.3-.6-8.7-1.7A12.4 12.4 0 0 1 1.9 42C.6 40 0 38 0 35.4h6.5a6.7 6.7 0 0 0 3.9 6c1.4.7 3.3 1.1 5.6 1.1 2.2 0 4-.3 5.4-1a7 7 0 0 0 3-2.4 6 6 0 0 0 1-3.4c0-1.5-.6-2.8-1.9-3.7-1.3-1-3.3-1.6-5.9-1.8l-4-.4c-3.7-.3-6.6-1.4-8.8-3.4a10 10 0 0 1-3.3-7.9c0-2.4.6-4.6 1.8-6.4a12 12 0 0 1 5-4.3c2.2-1 4.7-1.6 7.5-1.6s5.5.5 7.6 1.6a12 12 0 0 1 5 4.4c1.2 1.8 1.8 4 1.8 6.7h-6.5a6.4 6.4 0 0 0-3.5-5.9c-1-.6-2.6-1-4.4-1s-3.2.3-4.4 1c-1.1.6-2 1.4-2.6 2.4-.5 1-.8 2-.8 3.1a5 5 0 0 0 1.5 3.6c1 1 2.6 1.7 4.7 1.9l4 .3c2.8.2 5.2.8 7.2 1.8 2.1 1 3.7 2.2 4.9 3.8a9.7 9.7 0 0 1 1.7 5.8c0 2.5-.7 4.7-2 6.6a13 13 0 0 1-5.6 4.4c-2.4 1-5.2 1.6-8.4 1.6Zm35.6 0c-2.6 0-4.8-.4-6.7-1.3a13 13 0 0 1-4.7-3.5 17.1 17.1 0 0 1-3.6-10.4v-1c0-2 .3-3.8 1-5.6a13 13 0 0 1 7.3-8.3 15 15 0 0 1 6.3-1.4A13.2 13.2 0 0 1 64 24.3c1 2.2 1.6 4.6 1.6 7.2V34H39.4v-4.3h21.8l-1.8 2.2c0-2-.3-3.7-.9-5.1a7.3 7.3 0 0 0-2.7-3.4c-1.2-.7-2.7-1.1-4.6-1.1s-3.4.4-4.7 1.3a8 8 0 0 0-2.9 3.6c-.6 1.5-.9 3.3-.9 5.4 0 2 .3 3.7 1 5.3a7.9 7.9 0 0 0 2.8 3.7c1.3.8 3 1.3 5 1.3s3.8-.5 5.1-1.3c1.3-1 2.1-2 2.4-3.2h6a11.8 11.8 0 0 1-7 8.7 16 16 0 0 1-6.4 1.2ZM80 48c-2.2 0-4-.3-5.7-1a8.4 8.4 0 0 1-3.7-3.3 9.7 9.7 0 0 1-1.3-5.2c0-2 .5-3.8 1.5-5.2a9 9 0 0 1 4.3-3.1c1.8-.7 4-1 6.7-1H89v4.1h-7.5c-2 0-3.4.5-4.4 1.4-1 1-1.6 2.1-1.6 3.6s.5 2.7 1.6 3.6c1 1 2.5 1.4 4.4 1.4 1.1 0 2.2-.2 3.2-.7 1-.4 1.9-1 2.6-2 .6-1 1-2.4 1-4.2l1.7 2.1c-.2 2-.7 3.8-1.5 5.2a9 9 0 0 1-3.4 3.3 12 12 0 0 1-5.3 1Zm9.5-.7v-8.8h-1v-10c0-1.8-.5-3.2-1.4-4.1-1-1-2.4-1.4-4.2-1.4a142.9 142.9 0 0 0-10.2.4v-5.6a74.8 74.8 0 0 1 8.6-.4c3 0 5.5.4 7.5 1.2s3.4 2 4.4 3.6c1 1.7 1.4 4 1.4 6.7v18.4h-5Zm12.9 0V17.8h5v12.3h-.2c0-4.2 1-7.4 2.8-9.5a11 11 0 0 1 8.3-3.1h1v5.6h-2a9 9 0 0 0-6.3 2.2c-1.5 1.5-2.2 3.6-2.2 6.4v15.6h-6.4Zm34.4 1a15 15 0 0 1-6.6-1.3c-1.9-.9-3.4-2-4.7-3.5a15.5 15.5 0 0 1-2.7-5c-.6-1.7-1-3.6-1-5.4v-1c0-2 .4-3.8 1-5.6a15 15 0 0 1 2.8-4.9c1.3-1.5 2.8-2.6 4.6-3.5a16.4 16.4 0 0 1 13.3.2c2 1 3.5 2.3 4.8 4a12 12 0 0 1 2 6H144c-.2-1.6-1-3-2.2-4.1a7.5 7.5 0 0 0-5.2-1.7 8 8 0 0 0-4.7 1.3 8 8 0 0 0-2.8 3.6 13.8 13.8 0 0 0 0 10.3c.6 1.5 1.5 2.7 2.8 3.6s2.8 1.3 4.8 1.3c1.5 0 2.7-.2 3.8-.8a7 7 0 0 0 2.6-2c.7-1 1-2 1.2-3.2h6.2a11 11 0 0 1-2 6.2 15.1 15.1 0 0 1-11.8 5.5Zm19.7-1v-40h6.4V31h-1.3c0-3 .4-5.5 1.1-7.6a9.7 9.7 0 0 1 3.5-4.8A9.9 9.9 0 0 1 172 17h.3c3.5 0 6 1.1 7.9 3.5 1.7 2.3 2.6 5.7 2.6 10v16.8h-6.4V29.6c0-2.1-.6-3.8-1.8-5a6.4 6.4 0 0 0-4.8-1.8c-2 0-3.7.7-5 2a7.8 7.8 0 0 0-1.9 5.5v17h-6.4Zm63.8 1a12.2 12.2 0 0 1-10.9-6.2 19 19 0 0 1-1.8-7.3h1.4v12.5h-5.1v-40h6.4v19.8l-2 3.5c.2-3.1.8-5.7 1.9-7.7a11 11 0 0 1 4.4-4.5c1.8-1 3.9-1.5 6.1-1.5a13.4 13.4 0 0 1 12.8 9.1c.7 1.9 1 3.8 1 6v1c0 2.2-.3 4.1-1 6a13.6 13.6 0 0 1-13.2 9.4Zm-1.2-5.5a8.4 8.4 0 0 0 7.9-5c.7-1.5 1.1-3.3 1.1-5.3s-.4-3.8-1.1-5.3a8.7 8.7 0 0 0-3.2-3.6 9.6 9.6 0 0 0-9.2-.2 8.5 8.5 0 0 0-3.3 3.2c-.8 1.4-1.3 3-1.3 5v2.3a9 9 0 0 0 1.3 4.8 9 9 0 0 0 3.4 3c1.4.7 2.8 1 4.4 1Zm27.3 3.9-10-28.9h6.5l9.5 28.9h-6Zm-7.5 12.2v-5.7h4.9c1 0 2-.1 2.9-.4a4 4 0 0 0 2-1.4c.4-.7.9-1.6 1.2-2.7l8.6-30.9h6.2l-9.3 32.4a14 14 0 0 1-2.5 5 8.9 8.9 0 0 1-4 2.8c-1.5.6-3.4.9-5.6.9h-4.4Zm9-12.2v-5.2h6.4v5.2H248Z"
        fill="#FFF"
      />
      <path
        d="M534.4 9.1H528a.8.8 0 0 1-.7-.7V1.8c0-.4.2-.7.6-.8l6.5-1c.4 0 .8.2.9.6v7.8c0 .4-.4.7-.8.7zM428 35.2V.8c0-.5-.3-.8-.7-.8h-.2l-6.4 1c-.4 0-.7.4-.7.8v35c0 1.6 0 11.8 12.3 12.2.5 0 .8-.4.8-.8V43c0-.4-.3-.7-.6-.8-4.5-.5-4.5-6-4.5-7zm106.5-21.8H528c-.4 0-.7.4-.7.8v34c0 .4.3.8.7.8h6.5c.4 0 .8-.4.8-.8v-34c0-.5-.4-.8-.8-.8zm-17.7 21.8V.8c0-.5-.3-.8-.8-.8l-6.5 1c-.4 0-.7.4-.7.8v35c0 1.6 0 11.8 12.3 12.2.4 0 .8-.4.8-.8V43c0-.4-.3-.7-.7-.8-4.4-.5-4.4-6-4.4-7zm-22.2-20.6a16.5 16.5 0 0 1 8.6 9.3c.8 2.2 1.3 4.8 1.3 7.5a19.4 19.4 0 0 1-4.6 12.6 14.8 14.8 0 0 1-5.2 3.6c-2 .9-5.2 1.4-6.8 1.4a21 21 0 0 1-6.7-1.4 15.4 15.4 0 0 1-8.6-9.3 21.3 21.3 0 0 1 0-14.4 15.2 15.2 0 0 1 8.6-9.3c2-.8 4.3-1.2 6.7-1.2s4.6.4 6.7 1.2zm-6.7 27.6c2.7 0 4.7-1 6.2-3s2.2-4.3 2.2-7.8-.7-6.3-2.2-8.3-3.5-3-6.2-3-4.7 1-6.1 3c-1.5 2-2.2 4.8-2.2 8.3s.7 5.8 2.2 7.8 3.5 3 6.2 3zm-88.8-28.8c-6.2 0-11.7 3.3-14.8 8.2a18.6 18.6 0 0 0 4.8 25.2c1.8 1.2 4 1.8 6.2 1.7s.1 0 .1 0h.9c4.2-.7 8-4 9.1-8.1v7.4c0 .4.3.7.8.7h6.4a.7.7 0 0 0 .7-.7V14.2c0-.5-.3-.8-.7-.8h-13.5zm6.3 26.5a9.8 9.8 0 0 1-5.7 2h-.5a10 10 0 0 1-9.2-14c1.4-3.7 5-6.3 9-6.3h6.4v18.3zm152.3-26.5h13.5c.5 0 .8.3.8.7v33.7c0 .4-.3.7-.8.7h-6.4a.7.7 0 0 1-.8-.7v-7.4c-1.2 4-4.8 7.4-9 8h-.1a4.2 4.2 0 0 1-.5.1h-.9a10.3 10.3 0 0 1-7-2.6c-4-3.3-6.5-8.4-6.5-14.2 0-3.7 1-7.2 3-10 3-5 8.5-8.3 14.7-8.3zm.6 28.4c2.2-.1 4.2-.6 5.7-2V21.7h-6.3a9.8 9.8 0 0 0-9 6.4 10.2 10.2 0 0 0 9.1 13.9h.5zM452.8 13.4c-6.2 0-11.7 3.3-14.8 8.2a18.5 18.5 0 0 0 3.6 24.3 10.4 10.4 0 0 0 13 .6c2.2-1.5 3.8-3.7 4.5-6.1v7.8c0 2.8-.8 5-2.2 6.3-1.5 1.5-4 2.2-7.5 2.2l-6-.3c-.3 0-.7.2-.8.5l-1.6 5.5c-.1.4.1.8.5 1h.1c2.8.4 5.5.6 7 .6 6.3 0 11-1.4 14-4.1 2.7-2.5 4.2-6.3 4.5-11.4V14.2c0-.5-.4-.8-.8-.8h-13.5zm6.3 8.2v18.3a9.6 9.6 0 0 1-5.6 2h-1a10.3 10.3 0 0 1-8.8-14c1.4-3.7 5-6.3 9-6.3h6.4zM291 31.5A32 32 0 0 1 322.8 0h30.8c.6 0 1.2.5 1.2 1.2v61.5c0 1.1-1.3 1.7-2.2 1l-19.2-17a18 18 0 0 1-11 3.4 18.1 18.1 0 1 1 18.2-14.8c-.1.4-.5.7-.9.6-.1 0-.3 0-.4-.2l-3.8-3.4c-.4-.3-.6-.8-.7-1.4a12 12 0 1 0-2.4 8.3c.4-.4 1-.5 1.6-.2l14.7 13.1v-46H323a26 26 0 1 0 10 49.7c.8-.4 1.6-.2 2.3.3l3 2.7c.3.2.3.7 0 1l-.2.2a32 32 0 0 1-47.2-28.6z"
        fill="#FFF"
      />
    </svg>
  </a>
</div>
`;

exports[`Common widget tests (Vue InstantSearch) > PoweredBy widget common tests > options > renders with default props 1`] = `
<div
  class="ais-PoweredBy ais-PoweredBy--light"
>
  <a
    aria-label="Search by Algolia"
    class="ais-PoweredBy-link"
    href="https://www.algolia.com/?utm_source=LIBRARY&utm_medium=website&utm_content=localhost&utm_campaign=poweredby"
    rel="noopener"
    target="_blank"
  >
    <svg
      class="ais-PoweredBy-logo"
      viewBox="0 0 572 64"
    >
      <path
        d="M16 48.3c-3.4 0-6.3-.6-8.7-1.7A12.4 12.4 0 0 1 1.9 42C.6 40 0 38 0 35.4h6.5a6.7 6.7 0 0 0 3.9 6c1.4.7 3.3 1.1 5.6 1.1 2.2 0 4-.3 5.4-1a7 7 0 0 0 3-2.4 6 6 0 0 0 1-3.4c0-1.5-.6-2.8-1.9-3.7-1.3-1-3.3-1.6-5.9-1.8l-4-.4c-3.7-.3-6.6-1.4-8.8-3.4a10 10 0 0 1-3.3-7.9c0-2.4.6-4.6 1.8-6.4a12 12 0 0 1 5-4.3c2.2-1 4.7-1.6 7.5-1.6s5.5.5 7.6 1.6a12 12 0 0 1 5 4.4c1.2 1.8 1.8 4 1.8 6.7h-6.5a6.4 6.4 0 0 0-3.5-5.9c-1-.6-2.6-1-4.4-1s-3.2.3-4.4 1c-1.1.6-2 1.4-2.6 2.4-.5 1-.8 2-.8 3.1a5 5 0 0 0 1.5 3.6c1 1 2.6 1.7 4.7 1.9l4 .3c2.8.2 5.2.8 7.2 1.8 2.1 1 3.7 2.2 4.9 3.8a9.7 9.7 0 0 1 1.7 5.8c0 2.5-.7 4.7-2 6.6a13 13 0 0 1-5.6 4.4c-2.4 1-5.2 1.6-8.4 1.6Zm35.6 0c-2.6 0-4.8-.4-6.7-1.3a13 13 0 0 1-4.7-3.5 17.1 17.1 0 0 1-3.6-10.4v-1c0-2 .3-3.8 1-5.6a13 13 0 0 1 7.3-8.3 15 15 0 0 1 6.3-1.4A13.2 13.2 0 0 1 64 24.3c1 2.2 1.6 4.6 1.6 7.2V34H39.4v-4.3h21.8l-1.8 2.2c0-2-.3-3.7-.9-5.1a7.3 7.3 0 0 0-2.7-3.4c-1.2-.7-2.7-1.1-4.6-1.1s-3.4.4-4.7 1.3a8 8 0 0 0-2.9 3.6c-.6 1.5-.9 3.3-.9 5.4 0 2 .3 3.7 1 5.3a7.9 7.9 0 0 0 2.8 3.7c1.3.8 3 1.3 5 1.3s3.8-.5 5.1-1.3c1.3-1 2.1-2 2.4-3.2h6a11.8 11.8 0 0 1-7 8.7 16 16 0 0 1-6.4 1.2ZM80 48c-2.2 0-4-.3-5.7-1a8.4 8.4 0 0 1-3.7-3.3 9.7 9.7 0 0 1-1.3-5.2c0-2 .5-3.8 1.5-5.2a9 9 0 0 1 4.3-3.1c1.8-.7 4-1 6.7-1H89v4.1h-7.5c-2 0-3.4.5-4.4 1.4-1 1-1.6 2.1-1.6 3.6s.5 2.7 1.6 3.6c1 1 2.5 1.4 4.4 1.4 1.1 0 2.2-.2 3.2-.7 1-.4 1.9-1 2.6-2 .6-1 1-2.4 1-4.2l1.7 2.1c-.2 2-.7 3.8-1.5 5.2a9 9 0 0 1-3.4 3.3 12 12 0 0 1-5.3 1Zm9.5-.7v-8.8h-1v-10c0-1.8-.5-3.2-1.4-4.1-1-1-2.4-1.4-4.2-1.4a142.9 142.9 0 0 0-10.2.4v-5.6a74.8 74.8 0 0 1 8.6-.4c3 0 5.5.4 7.5 1.2s3.4 2 4.4 3.6c1 1.7 1.4 4 1.4 6.7v18.4h-5Zm12.9 0V17.8h5v12.3h-.2c0-4.2 1-7.4 2.8-9.5a11 11 0 0 1 8.3-3.1h1v5.6h-2a9 9 0 0 0-6.3 2.2c-1.5 1.5-2.2 3.6-2.2 6.4v15.6h-6.4Zm34.4 1a15 15 0 0 1-6.6-1.3c-1.9-.9-3.4-2-4.7-3.5a15.5 15.5 0 0 1-2.7-5c-.6-1.7-1-3.6-1-5.4v-1c0-2 .4-3.8 1-5.6a15 15 0 0 1 2.8-4.9c1.3-1.5 2.8-2.6 4.6-3.5a16.4 16.4 0 0 1 13.3.2c2 1 3.5 2.3 4.8 4a12 12 0 0 1 2 6H144c-.2-1.6-1-3-2.2-4.1a7.5 7.5 0 0 0-5.2-1.7 8 8 0 0 0-4.7 1.3 8 8 0 0 0-2.8 3.6 13.8 13.8 0 0 0 0 10.3c.6 1.5 1.5 2.7 2.8 3.6s2.8 1.3 4.8 1.3c1.5 0 2.7-.2 3.8-.8a7 7 0 0 0 2.6-2c.7-1 1-2 1.2-3.2h6.2a11 11 0 0 1-2 6.2 15.1 15.1 0 0 1-11.8 5.5Zm19.7-1v-40h6.4V31h-1.3c0-3 .4-5.5 1.1-7.6a9.7 9.7 0 0 1 3.5-4.8A9.9 9.9 0 0 1 172 17h.3c3.5 0 6 1.1 7.9 3.5 1.7 2.3 2.6 5.7 2.6 10v16.8h-6.4V29.6c0-2.1-.6-3.8-1.8-5a6.4 6.4 0 0 0-4.8-1.8c-2 0-3.7.7-5 2a7.8 7.8 0 0 0-1.9 5.5v17h-6.4Zm63.8 1a12.2 12.2 0 0 1-10.9-6.2 19 19 0 0 1-1.8-7.3h1.4v12.5h-5.1v-40h6.4v19.8l-2 3.5c.2-3.1.8-5.7 1.9-7.7a11 11 0 0 1 4.4-4.5c1.8-1 3.9-1.5 6.1-1.5a13.4 13.4 0 0 1 12.8 9.1c.7 1.9 1 3.8 1 6v1c0 2.2-.3 4.1-1 6a13.6 13.6 0 0 1-13.2 9.4Zm-1.2-5.5a8.4 8.4 0 0 0 7.9-5c.7-1.5 1.1-3.3 1.1-5.3s-.4-3.8-1.1-5.3a8.7 8.7 0 0 0-3.2-3.6 9.6 9.6 0 0 0-9.2-.2 8.5 8.5 0 0 0-3.3 3.2c-.8 1.4-1.3 3-1.3 5v2.3a9 9 0 0 0 1.3 4.8 9 9 0 0 0 3.4 3c1.4.7 2.8 1 4.4 1Zm27.3 3.9-10-28.9h6.5l9.5 28.9h-6Zm-7.5 12.2v-5.7h4.9c1 0 2-.1 2.9-.4a4 4 0 0 0 2-1.4c.4-.7.9-1.6 1.2-2.7l8.6-30.9h6.2l-9.3 32.4a14 14 0 0 1-2.5 5 8.9 8.9 0 0 1-4 2.8c-1.5.6-3.4.9-5.6.9h-4.4Zm9-12.2v-5.2h6.4v5.2H248Z"
        fill="#36395A"
      />
      <path
        d="M534.4 9.1H528a.8.8 0 0 1-.7-.7V1.8c0-.4.2-.7.6-.8l6.5-1c.4 0 .8.2.9.6v7.8c0 .4-.4.7-.8.7zM428 35.2V.8c0-.5-.3-.8-.7-.8h-.2l-6.4 1c-.4 0-.7.4-.7.8v35c0 1.6 0 11.8 12.3 12.2.5 0 .8-.4.8-.8V43c0-.4-.3-.7-.6-.8-4.5-.5-4.5-6-4.5-7zm106.5-21.8H528c-.4 0-.7.4-.7.8v34c0 .4.3.8.7.8h6.5c.4 0 .8-.4.8-.8v-34c0-.5-.4-.8-.8-.8zm-17.7 21.8V.8c0-.5-.3-.8-.8-.8l-6.5 1c-.4 0-.7.4-.7.8v35c0 1.6 0 11.8 12.3 12.2.4 0 .8-.4.8-.8V43c0-.4-.3-.7-.7-.8-4.4-.5-4.4-6-4.4-7zm-22.2-20.6a16.5 16.5 0 0 1 8.6 9.3c.8 2.2 1.3 4.8 1.3 7.5a19.4 19.4 0 0 1-4.6 12.6 14.8 14.8 0 0 1-5.2 3.6c-2 .9-5.2 1.4-6.8 1.4a21 21 0 0 1-6.7-1.4 15.4 15.4 0 0 1-8.6-9.3 21.3 21.3 0 0 1 0-14.4 15.2 15.2 0 0 1 8.6-9.3c2-.8 4.3-1.2 6.7-1.2s4.6.4 6.7 1.2zm-6.7 27.6c2.7 0 4.7-1 6.2-3s2.2-4.3 2.2-7.8-.7-6.3-2.2-8.3-3.5-3-6.2-3-4.7 1-6.1 3c-1.5 2-2.2 4.8-2.2 8.3s.7 5.8 2.2 7.8 3.5 3 6.2 3zm-88.8-28.8c-6.2 0-11.7 3.3-14.8 8.2a18.6 18.6 0 0 0 4.8 25.2c1.8 1.2 4 1.8 6.2 1.7s.1 0 .1 0h.9c4.2-.7 8-4 9.1-8.1v7.4c0 .4.3.7.8.7h6.4a.7.7 0 0 0 .7-.7V14.2c0-.5-.3-.8-.7-.8h-13.5zm6.3 26.5a9.8 9.8 0 0 1-5.7 2h-.5a10 10 0 0 1-9.2-14c1.4-3.7 5-6.3 9-6.3h6.4v18.3zm152.3-26.5h13.5c.5 0 .8.3.8.7v33.7c0 .4-.3.7-.8.7h-6.4a.7.7 0 0 1-.8-.7v-7.4c-1.2 4-4.8 7.4-9 8h-.1a4.2 4.2 0 0 1-.5.1h-.9a10.3 10.3 0 0 1-7-2.6c-4-3.3-6.5-8.4-6.5-14.2 0-3.7 1-7.2 3-10 3-5 8.5-8.3 14.7-8.3zm.6 28.4c2.2-.1 4.2-.6 5.7-2V21.7h-6.3a9.8 9.8 0 0 0-9 6.4 10.2 10.2 0 0 0 9.1 13.9h.5zM452.8 13.4c-6.2 0-11.7 3.3-14.8 8.2a18.5 18.5 0 0 0 3.6 24.3 10.4 10.4 0 0 0 13 .6c2.2-1.5 3.8-3.7 4.5-6.1v7.8c0 2.8-.8 5-2.2 6.3-1.5 1.5-4 2.2-7.5 2.2l-6-.3c-.3 0-.7.2-.8.5l-1.6 5.5c-.1.4.1.8.5 1h.1c2.8.4 5.5.6 7 .6 6.3 0 11-1.4 14-4.1 2.7-2.5 4.2-6.3 4.5-11.4V14.2c0-.5-.4-.8-.8-.8h-13.5zm6.3 8.2v18.3a9.6 9.6 0 0 1-5.6 2h-1a10.3 10.3 0 0 1-8.8-14c1.4-3.7 5-6.3 9-6.3h6.4zM291 31.5A32 32 0 0 1 322.8 0h30.8c.6 0 1.2.5 1.2 1.2v61.5c0 1.1-1.3 1.7-2.2 1l-19.2-17a18 18 0 0 1-11 3.4 18.1 18.1 0 1 1 18.2-14.8c-.1.4-.5.7-.9.6-.1 0-.3 0-.4-.2l-3.8-3.4c-.4-.3-.6-.8-.7-1.4a12 12 0 1 0-2.4 8.3c.4-.4 1-.5 1.6-.2l14.7 13.1v-46H323a26 26 0 1 0 10 49.7c.8-.4 1.6-.2 2.3.3l3 2.7c.3.2.3.7 0 1l-.2.2a32 32 0 0 1-47.2-28.6z"
        fill="#003DFF"
      />
    </svg>
  </a>
</div>
`;

exports[`Common widget tests (Vue InstantSearch) > RangeInput widget common tests > options > renders with default props 1`] = `
<div
  class="ais-RangeInput"
>
  <form
    class="ais-RangeInput-form"
  >
    <label
      class="ais-RangeInput-label"
    >
      <input
        class="ais-RangeInput-input ais-RangeInput-input--min"
        max="1000"
        min="1"
        placeholder="1"
        step="1"
        type="number"
      />
    </label>
    <span
      class="ais-RangeInput-separator"
    >
      to
    </span>
    <label
      class="ais-RangeInput-label"
    >
      <input
        class="ais-RangeInput-input ais-RangeInput-input--max"
        max="1000"
        min="1"
        placeholder="1000"
        step="1"
        type="number"
      />
    </label>
    <button
      class="ais-RangeInput-submit"
      type="submit"
    >
      Go
    </button>
  </form>
</div>
`;

exports[`Common widget tests (Vue InstantSearch) > RatingMenu widget common tests > options > renders with props 1`] = `
<div
  class="ais-RatingMenu"
>
  <svg
    style="display: none;"
  >
    <symbol
      id="ais-RatingMenu-starSymbol"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 .288l2.833 8.718h9.167l-7.417 5.389 2.833 8.718-7.416-5.388-7.417 5.388 2.833-8.718-7.416-5.389h9.167z"
      />
    </symbol>
    <symbol
      id="ais-RatingMenu-starEmptySymbol"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 6.76l1.379 4.246h4.465l-3.612 2.625 1.379 4.246-3.611-2.625-3.612 2.625 1.379-4.246-3.612-2.625h4.465l1.38-4.246zm0-6.472l-2.833 8.718h-9.167l7.416 5.389-2.833 8.718 7.417-5.388 7.416 5.388-2.833-8.718 7.417-5.389h-9.167l-2.833-8.718z"
      />
    </symbol>
  </svg>
  <ul
    class="ais-RatingMenu-list"
  >
    <li
      class="ais-RatingMenu-item"
    >
      <div>
        <a
          aria-label="4 & up"
          class="ais-RatingMenu-link"
          href="#"
        >
          <svg
            aria-hidden="true"
            class="ais-RatingMenu-starIcon ais-RatingMenu-starIcon--full"
            height="24"
            width="24"
          >
            <use
              href="#ais-RatingMenu-starSymbol"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="ais-RatingMenu-starIcon ais-RatingMenu-starIcon--full"
            height="24"
            width="24"
          >
            <use
              href="#ais-RatingMenu-starSymbol"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="ais-RatingMenu-starIcon ais-RatingMenu-starIcon--full"
            height="24"
            width="24"
          >
            <use
              href="#ais-RatingMenu-starSymbol"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="ais-RatingMenu-starIcon ais-RatingMenu-starIcon--full"
            height="24"
            width="24"
          >
            <use
              href="#ais-RatingMenu-starSymbol"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="ais-RatingMenu-starIcon ais-RatingMenu-starIcon--empty"
            height="24"
            width="24"
          >
            <use
              href="#ais-RatingMenu-starEmptySymbol"
            />
          </svg>
          <span
            aria-hidden="true"
            class="ais-RatingMenu-label"
          >
            & Up
          </span>
          <span
            class="ais-RatingMenu-count"
          >
            16075
          </span>
        </a>
      </div>
    </li>
    <li
      class="ais-RatingMenu-item"
    >
      <div>
        <a
          aria-label="3 & up"
          class="ais-RatingMenu-link"
          href="#"
        >
          <svg
            aria-hidden="true"
            class="ais-RatingMenu-starIcon ais-RatingMenu-starIcon--full"
            height="24"
            width="24"
          >
            <use
              href="#ais-RatingMenu-starSymbol"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="ais-RatingMenu-starIcon ais-RatingMenu-starIcon--full"
            height="24"
            width="24"
          >
            <use
              href="#ais-RatingMenu-starSymbol"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="ais-RatingMenu-starIcon ais-RatingMenu-starIcon--full"
            height="24"
            width="24"
          >
            <use
              href="#ais-RatingMenu-starSymbol"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="ais-RatingMenu-starIcon ais-RatingMenu-starIcon--empty"
            height="24"
            width="24"
          >
            <use
              href="#ais-RatingMenu-starEmptySymbol"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="ais-RatingMenu-starIcon ais-RatingMenu-starIcon--empty"
            height="24"
            width="24"
          >
            <use
              href="#ais-RatingMenu-starEmptySymbol"
            />
          </svg>
          <span
            aria-hidden="true"
            class="ais-RatingMenu-label"
          >
            & Up
          </span>
          <span
            class="ais-RatingMenu-count"
          >
            17697
          </span>
        </a>
      </div>
    </li>
    <li
      class="ais-RatingMenu-item"
    >
      <div>
        <a
          aria-label="2 & up"
          class="ais-RatingMenu-link"
          href="#"
        >
          <svg
            aria-hidden="true"
            class="ais-RatingMenu-starIcon ais-RatingMenu-starIcon--full"
            height="24"
            width="24"
          >
            <use
              href="#ais-RatingMenu-starSymbol"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="ais-RatingMenu-starIcon ais-RatingMenu-starIcon--full"
            height="24"
            width="24"
          >
            <use
              href="#ais-RatingMenu-starSymbol"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="ais-RatingMenu-starIcon ais-RatingMenu-starIcon--empty"
            height="24"
            width="24"
          >
            <use
              href="#ais-RatingMenu-starEmptySymbol"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="ais-RatingMenu-starIcon ais-RatingMenu-starIcon--empty"
            height="24"
            width="24"
          >
            <use
              href="#ais-RatingMenu-starEmptySymbol"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="ais-RatingMenu-starIcon ais-RatingMenu-starIcon--empty"
            height="24"
            width="24"
          >
            <use
              href="#ais-RatingMenu-starEmptySymbol"
            />
          </svg>
          <span
            aria-hidden="true"
            class="ais-RatingMenu-label"
          >
            & Up
          </span>
          <span
            class="ais-RatingMenu-count"
          >
            17891
          </span>
        </a>
      </div>
    </li>
    <li
      class="ais-RatingMenu-item"
    >
      <div>
        <a
          aria-label="1 & up"
          class="ais-RatingMenu-link"
          href="#"
        >
          <svg
            aria-hidden="true"
            class="ais-RatingMenu-starIcon ais-RatingMenu-starIcon--full"
            height="24"
            width="24"
          >
            <use
              href="#ais-RatingMenu-starSymbol"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="ais-RatingMenu-starIcon ais-RatingMenu-starIcon--empty"
            height="24"
            width="24"
          >
            <use
              href="#ais-RatingMenu-starEmptySymbol"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="ais-RatingMenu-starIcon ais-RatingMenu-starIcon--empty"
            height="24"
            width="24"
          >
            <use
              href="#ais-RatingMenu-starEmptySymbol"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="ais-RatingMenu-starIcon ais-RatingMenu-starIcon--empty"
            height="24"
            width="24"
          >
            <use
              href="#ais-RatingMenu-starEmptySymbol"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="ais-RatingMenu-starIcon ais-RatingMenu-starIcon--empty"
            height="24"
            width="24"
          >
            <use
              href="#ais-RatingMenu-starEmptySymbol"
            />
          </svg>
          <span
            aria-hidden="true"
            class="ais-RatingMenu-label"
          >
            & Up
          </span>
          <span
            class="ais-RatingMenu-count"
          >
            18047
          </span>
        </a>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Common widget tests (Vue InstantSearch) > RefinementList widget common tests > options > Show more/less > displays a "Show more" button 1`] = `
<div
  class="ais-RefinementList"
>
  <ul
    class="ais-RefinementList-list"
  >
    <li
      class="ais-RefinementList-item"
    >
      <label
        class="ais-RefinementList-label"
      >
        <input
          class="ais-RefinementList-checkbox"
          type="checkbox"
          value="Insignia™"
        />
        <span
          class="ais-RefinementList-labelText"
        >
          Insignia™
        </span>
        <span
          class="ais-RefinementList-count"
        >
          746
        </span>
      </label>
    </li>
    <li
      class="ais-RefinementList-item"
    >
      <label
        class="ais-RefinementList-label"
      >
        <input
          class="ais-RefinementList-checkbox"
          type="checkbox"
          value="Samsung"
        />
        <span
          class="ais-RefinementList-labelText"
        >
          Samsung
        </span>
        <span
          class="ais-RefinementList-count"
        >
          633
        </span>
      </label>
    </li>
    <li
      class="ais-RefinementList-item"
    >
      <label
        class="ais-RefinementList-label"
      >
        <input
          class="ais-RefinementList-checkbox"
          type="checkbox"
          value="Metra"
        />
        <span
          class="ais-RefinementList-labelText"
        >
          Metra
        </span>
        <span
          class="ais-RefinementList-count"
        >
          591
        </span>
      </label>
    </li>
    <li
      class="ais-RefinementList-item"
    >
      <label
        class="ais-RefinementList-label"
      >
        <input
          class="ais-RefinementList-checkbox"
          type="checkbox"
          value="HP"
        />
        <span
          class="ais-RefinementList-labelText"
        >
          HP
        </span>
        <span
          class="ais-RefinementList-count"
        >
          530
        </span>
      </label>
    </li>
    <li
      class="ais-RefinementList-item"
    >
      <label
        class="ais-RefinementList-label"
      >
        <input
          class="ais-RefinementList-checkbox"
          type="checkbox"
          value="Apple"
        />
        <span
          class="ais-RefinementList-labelText"
        >
          Apple
        </span>
        <span
          class="ais-RefinementList-count"
        >
          442
        </span>
      </label>
    </li>
    <li
      class="ais-RefinementList-item"
    >
      <label
        class="ais-RefinementList-label"
      >
        <input
          class="ais-RefinementList-checkbox"
          type="checkbox"
          value="GE"
        />
        <span
          class="ais-RefinementList-labelText"
        >
          GE
        </span>
        <span
          class="ais-RefinementList-count"
        >
          394
        </span>
      </label>
    </li>
    <li
      class="ais-RefinementList-item"
    >
      <label
        class="ais-RefinementList-label"
      >
        <input
          class="ais-RefinementList-checkbox"
          type="checkbox"
          value="Sony"
        />
        <span
          class="ais-RefinementList-labelText"
        >
          Sony
        </span>
        <span
          class="ais-RefinementList-count"
        >
          350
        </span>
      </label>
    </li>
    <li
      class="ais-RefinementList-item"
    >
      <label
        class="ais-RefinementList-label"
      >
        <input
          class="ais-RefinementList-checkbox"
          type="checkbox"
          value="Incipio"
        />
        <span
          class="ais-RefinementList-labelText"
        >
          Incipio
        </span>
        <span
          class="ais-RefinementList-count"
        >
          320
        </span>
      </label>
    </li>
    <li
      class="ais-RefinementList-item"
    >
      <label
        class="ais-RefinementList-label"
      >
        <input
          class="ais-RefinementList-checkbox"
          type="checkbox"
          value="KitchenAid"
        />
        <span
          class="ais-RefinementList-labelText"
        >
          KitchenAid
        </span>
        <span
          class="ais-RefinementList-count"
        >
          318
        </span>
      </label>
    </li>
    <li
      class="ais-RefinementList-item"
    >
      <label
        class="ais-RefinementList-label"
      >
        <input
          class="ais-RefinementList-checkbox"
          type="checkbox"
          value="Whirlpool"
        />
        <span
          class="ais-RefinementList-labelText"
        >
          Whirlpool
        </span>
        <span
          class="ais-RefinementList-count"
        >
          298
        </span>
      </label>
    </li>
  </ul>
  <button
    class="ais-RefinementList-showMore"
  >
    Show more
  </button>
</div>
`;

exports[`Common widget tests (Vue InstantSearch) > RefinementList widget common tests > options > limits the number of items to display 1`] = `
<div
  class="ais-RefinementList"
>
  <ul
    class="ais-RefinementList-list"
  >
    <li
      class="ais-RefinementList-item"
    >
      <label
        class="ais-RefinementList-label"
      >
        <input
          class="ais-RefinementList-checkbox"
          type="checkbox"
          value="Insignia™"
        />
        <span
          class="ais-RefinementList-labelText"
        >
          Insignia™
        </span>
        <span
          class="ais-RefinementList-count"
        >
          746
        </span>
      </label>
    </li>
    <li
      class="ais-RefinementList-item"
    >
      <label
        class="ais-RefinementList-label"
      >
        <input
          class="ais-RefinementList-checkbox"
          type="checkbox"
          value="Samsung"
        />
        <span
          class="ais-RefinementList-labelText"
        >
          Samsung
        </span>
        <span
          class="ais-RefinementList-count"
        >
          633
        </span>
      </label>
    </li>
    <li
      class="ais-RefinementList-item"
    >
      <label
        class="ais-RefinementList-label"
      >
        <input
          class="ais-RefinementList-checkbox"
          type="checkbox"
          value="Metra"
        />
        <span
          class="ais-RefinementList-labelText"
        >
          Metra
        </span>
        <span
          class="ais-RefinementList-count"
        >
          591
        </span>
      </label>
    </li>
    <li
      class="ais-RefinementList-item"
    >
      <label
        class="ais-RefinementList-label"
      >
        <input
          class="ais-RefinementList-checkbox"
          type="checkbox"
          value="HP"
        />
        <span
          class="ais-RefinementList-labelText"
        >
          HP
        </span>
        <span
          class="ais-RefinementList-count"
        >
          530
        </span>
      </label>
    </li>
    <li
      class="ais-RefinementList-item"
    >
      <label
        class="ais-RefinementList-label"
      >
        <input
          class="ais-RefinementList-checkbox"
          type="checkbox"
          value="Apple"
        />
        <span
          class="ais-RefinementList-labelText"
        >
          Apple
        </span>
        <span
          class="ais-RefinementList-count"
        >
          442
        </span>
      </label>
    </li>
  </ul>
</div>
`;

exports[`Common widget tests (Vue InstantSearch) > RefinementList widget common tests > options > renders with props 1`] = `
<div
  class="ais-RefinementList"
>
  <ul
    class="ais-RefinementList-list"
  >
    <li
      class="ais-RefinementList-item"
    >
      <label
        class="ais-RefinementList-label"
      >
        <input
          class="ais-RefinementList-checkbox"
          type="checkbox"
          value="Insignia™"
        />
        <span
          class="ais-RefinementList-labelText"
        >
          Insignia™
        </span>
        <span
          class="ais-RefinementList-count"
        >
          746
        </span>
      </label>
    </li>
    <li
      class="ais-RefinementList-item"
    >
      <label
        class="ais-RefinementList-label"
      >
        <input
          class="ais-RefinementList-checkbox"
          type="checkbox"
          value="Samsung"
        />
        <span
          class="ais-RefinementList-labelText"
        >
          Samsung
        </span>
        <span
          class="ais-RefinementList-count"
        >
          633
        </span>
      </label>
    </li>
    <li
      class="ais-RefinementList-item"
    >
      <label
        class="ais-RefinementList-label"
      >
        <input
          class="ais-RefinementList-checkbox"
          type="checkbox"
          value="Metra"
        />
        <span
          class="ais-RefinementList-labelText"
        >
          Metra
        </span>
        <span
          class="ais-RefinementList-count"
        >
          591
        </span>
      </label>
    </li>
    <li
      class="ais-RefinementList-item"
    >
      <label
        class="ais-RefinementList-label"
      >
        <input
          class="ais-RefinementList-checkbox"
          type="checkbox"
          value="HP"
        />
        <span
          class="ais-RefinementList-labelText"
        >
          HP
        </span>
        <span
          class="ais-RefinementList-count"
        >
          530
        </span>
      </label>
    </li>
    <li
      class="ais-RefinementList-item"
    >
      <label
        class="ais-RefinementList-label"
      >
        <input
          class="ais-RefinementList-checkbox"
          type="checkbox"
          value="Apple"
        />
        <span
          class="ais-RefinementList-labelText"
        >
          Apple
        </span>
        <span
          class="ais-RefinementList-count"
        >
          442
        </span>
      </label>
    </li>
    <li
      class="ais-RefinementList-item"
    >
      <label
        class="ais-RefinementList-label"
      >
        <input
          class="ais-RefinementList-checkbox"
          type="checkbox"
          value="GE"
        />
        <span
          class="ais-RefinementList-labelText"
        >
          GE
        </span>
        <span
          class="ais-RefinementList-count"
        >
          394
        </span>
      </label>
    </li>
    <li
      class="ais-RefinementList-item"
    >
      <label
        class="ais-RefinementList-label"
      >
        <input
          class="ais-RefinementList-checkbox"
          type="checkbox"
          value="Sony"
        />
        <span
          class="ais-RefinementList-labelText"
        >
          Sony
        </span>
        <span
          class="ais-RefinementList-count"
        >
          350
        </span>
      </label>
    </li>
    <li
      class="ais-RefinementList-item"
    >
      <label
        class="ais-RefinementList-label"
      >
        <input
          class="ais-RefinementList-checkbox"
          type="checkbox"
          value="Incipio"
        />
        <span
          class="ais-RefinementList-labelText"
        >
          Incipio
        </span>
        <span
          class="ais-RefinementList-count"
        >
          320
        </span>
      </label>
    </li>
    <li
      class="ais-RefinementList-item"
    >
      <label
        class="ais-RefinementList-label"
      >
        <input
          class="ais-RefinementList-checkbox"
          type="checkbox"
          value="KitchenAid"
        />
        <span
          class="ais-RefinementList-labelText"
        >
          KitchenAid
        </span>
        <span
          class="ais-RefinementList-count"
        >
          318
        </span>
      </label>
    </li>
    <li
      class="ais-RefinementList-item"
    >
      <label
        class="ais-RefinementList-label"
      >
        <input
          class="ais-RefinementList-checkbox"
          type="checkbox"
          value="Whirlpool"
        />
        <span
          class="ais-RefinementList-labelText"
        >
          Whirlpool
        </span>
        <span
          class="ais-RefinementList-count"
        >
          298
        </span>
      </label>
    </li>
  </ul>
</div>
`;

exports[`Common widget tests (Vue InstantSearch) > RefinementList widget common tests > options > searching > displays a fallback when there are no results 1`] = `
<div
  class="ais-RefinementList ais-RefinementList--noRefinement"
>
  <div
    class="ais-RefinementList-searchBox"
  >
    <div
      class="ais-SearchBox"
    >
      <form
        action=""
        class="ais-SearchBox-form"
        novalidate=""
        role="search"
      >
        <input
          aria-label="Search for filters"
          autocapitalize="off"
          autocomplete="off"
          autocorrect="off"
          class="ais-SearchBox-input"
          maxlength="512"
          placeholder="Search brands"
          spellcheck="false"
          type="search"
        />
        <button
          class="ais-SearchBox-submit"
          title="Submit the search query"
          type="submit"
        >
          <svg
            aria-hidden="true"
            class="ais-SearchBox-submitIcon"
            height="10"
            viewBox="0 0 40 40"
            width="10"
          >
            <path
              d="M26.804 29.01c-2.832 2.34-6.465 3.746-10.426 3.746C7.333 32.756 0 25.424 0 16.378 0 7.333 7.333 0 16.378 0c9.046 0 16.378 7.333 16.378 16.378 0 3.96-1.406 7.594-3.746 10.426l10.534 10.534c.607.607.61 1.59-.004 2.202-.61.61-1.597.61-2.202.004L26.804 29.01zm-10.426.627c7.323 0 13.26-5.936 13.26-13.26 0-7.32-5.937-13.257-13.26-13.257C9.056 3.12 3.12 9.056 3.12 16.378c0 7.323 5.936 13.26 13.258 13.26z"
            />
          </svg>
        </button>
        <button
          class="ais-SearchBox-reset"
          title="Clear the search query"
          type="reset"
        >
          <svg
            aria-hidden="true"
            class="ais-SearchBox-resetIcon"
            height="10"
            viewBox="0 0 20 20"
            width="10"
          >
            <path
              d="M8.114 10L.944 2.83 0 1.885 1.886 0l.943.943L10 8.113l7.17-7.17.944-.943L20 1.886l-.943.943-7.17 7.17 7.17 7.17.943.944L18.114 20l-.943-.943-7.17-7.17-7.17 7.17-.944.943L0 18.114l.943-.943L8.113 10z"
            />
          </svg>
        </button>
        <span
          class="ais-SearchBox-loadingIndicator"
          hidden=""
        >
          <svg
            aria-hidden="true"
            aria-label="Results are loading"
            class="ais-SearchBox-loadingIcon"
            height="16"
            stroke="#444"
            viewBox="0 0 38 38"
            width="16"
          >
            <g
              fill="none"
              fill-rule="evenodd"
            >
              <g
                stroke-width="2"
                transform="translate(1 1)"
              >
                <circle
                  cx="18"
                  cy="18"
                  r="18"
                  stroke-opacity=".5"
                />
                <path
                  d="M36 18c0-9.94-8.06-18-18-18"
                >
                  <animatetransform
                    attributeName="transform"
                    dur="1s"
                    from="0 18 18"
                    repeatCount="indefinite"
                    to="360 18 18"
                    type="rotate"
                  />
                </path>
              </g>
            </g>
          </svg>
        </span>
      </form>
    </div>
  </div>
  <div
    class="ais-RefinementList-noResults"
  >
    No results
  </div>
</div>
`;

exports[`Common widget tests (Vue InstantSearch) > RefinementList widget common tests > options > searching > displays a search box 1`] = `
<span
  class="ais-RefinementList-labelText"
>
  Insignia™
</span>
`;

exports[`Common widget tests (Vue InstantSearch) > RefinementList widget common tests > options > searching > displays a search box 2`] = `
<span
  class="ais-RefinementList-labelText"
>
  <span
    class="ais-Highlight"
  >
    <mark
      class="ais-Highlight-highlighted"
    >
      App
    </mark>
    <span
      class="ais-Highlight-nonHighlighted"
    >
      le
    </span>
  </span>
</span>
`;

exports[`Common widget tests (Vue InstantSearch) > RefinementList widget common tests > options > searching > does not select first item on submitting the search (with searchableSelectOnSubmit: false) > 
          "Apple ☐
          Alpine ☐
          APC ☐
          Amped Wireless ☐
          Applebee's ☐
          Amplicom ☐
          Apollo Enclosures ☐
          Apple® ☐
          Applica ☐
          Apricorn ☐"
         1`] = `
"Apple ☐
Alpine ☐
APC ☐
Amped Wireless ☐
Applebee's ☐
Amplicom ☐
Apollo Enclosures ☐
Apple® ☐
Applica ☐
Apricorn ☐"
`;

exports[`Common widget tests (Vue InstantSearch) > RefinementList widget common tests > options > searching > does not select first item on submitting the search (with searchableSelectOnSubmit: false) > 
          "Apple ☐
          Alpine ☐
          APC ☐
          Amped Wireless ☐
          Applebee's ☐
          Amplicom ☐
          Apollo Enclosures ☐
          Apple® ☐
          Applica ☐
          Apricorn ☐"
         2`] = `
"Apple ☐
Alpine ☐
APC ☐
Amped Wireless ☐
Applebee's ☐
Amplicom ☐
Apollo Enclosures ☐
Apple® ☐
Applica ☐
Apricorn ☐"
`;

exports[`Common widget tests (Vue InstantSearch) > RefinementList widget common tests > options > searching > does not select first item on submitting the search (with searchableSelectOnSubmit: false) > 
          "Apple ☐
          Alpine ☐
          APC ☐
          Amped Wireless ☐
          Applebee's ☐
          Amplicom ☐
          Apollo Enclosures ☐
          Apple® ☐
          Applica ☐
          Apricorn ☐"
         3`] = `
"Apple ☐
Alpine ☐
APC ☐
Amped Wireless ☐
Applebee's ☐
Amplicom ☐
Apollo Enclosures ☐
Apple® ☐
Applica ☐
Apricorn ☐"
`;

exports[`Common widget tests (Vue InstantSearch) > RefinementList widget common tests > options > searching > does not select first item on submitting the search (with searchableSelectOnSubmit: false) > 
          "Insignia™ ☐
          Samsung ☐
          Metra ☐
          HP ☐
          Apple ☐
          GE ☐
          Sony ☐
          Incipio ☐
          KitchenAid ☐
          Whirlpool ☐"
         1`] = `
"Insignia™ ☐
Samsung ☐
Metra ☐
HP ☐
Apple ☐
GE ☐
Sony ☐
Incipio ☐
KitchenAid ☐
Whirlpool ☐"
`;

exports[`Common widget tests (Vue InstantSearch) > SearchBox widget common tests > options > renders with default props 1`] = `
<div
  class="ais-SearchBox"
>
  <form
    action=""
    class="ais-SearchBox-form"
    novalidate=""
    role="search"
  >
    <input
      aria-label="Search"
      autocapitalize="off"
      autocomplete="off"
      autocorrect="off"
      class="ais-SearchBox-input"
      maxlength="512"
      placeholder=""
      spellcheck="false"
      type="search"
    />
    <button
      class="ais-SearchBox-submit"
      title="Submit the search query"
      type="submit"
    >
      <svg
        aria-hidden="true"
        class="ais-SearchBox-submitIcon"
        height="10"
        viewBox="0 0 40 40"
        width="10"
      >
        <path
          d="M26.804 29.01c-2.832 2.34-6.465 3.746-10.426 3.746C7.333 32.756 0 25.424 0 16.378 0 7.333 7.333 0 16.378 0c9.046 0 16.378 7.333 16.378 16.378 0 3.96-1.406 7.594-3.746 10.426l10.534 10.534c.607.607.61 1.59-.004 2.202-.61.61-1.597.61-2.202.004L26.804 29.01zm-10.426.627c7.323 0 13.26-5.936 13.26-13.26 0-7.32-5.937-13.257-13.26-13.257C9.056 3.12 3.12 9.056 3.12 16.378c0 7.323 5.936 13.26 13.258 13.26z"
        />
      </svg>
    </button>
    <button
      class="ais-SearchBox-reset"
      hidden=""
      title="Clear the search query"
      type="reset"
    >
      <svg
        aria-hidden="true"
        class="ais-SearchBox-resetIcon"
        height="10"
        viewBox="0 0 20 20"
        width="10"
      >
        <path
          d="M8.114 10L.944 2.83 0 1.885 1.886 0l.943.943L10 8.113l7.17-7.17.944-.943L20 1.886l-.943.943-7.17 7.17 7.17 7.17.943.944L18.114 20l-.943-.943-7.17-7.17-7.17 7.17-.944.943L0 18.114l.943-.943L8.113 10z"
        />
      </svg>
    </button>
    <span
      class="ais-SearchBox-loadingIndicator"
      hidden=""
    >
      <svg
        aria-hidden="true"
        aria-label="Results are loading"
        class="ais-SearchBox-loadingIcon"
        height="16"
        stroke="#444"
        viewBox="0 0 38 38"
        width="16"
      >
        <g
          fill="none"
          fill-rule="evenodd"
        >
          <g
            stroke-width="2"
            transform="translate(1 1)"
          >
            <circle
              cx="18"
              cy="18"
              r="18"
              stroke-opacity=".5"
            />
            <path
              d="M36 18c0-9.94-8.06-18-18-18"
            >
              <animatetransform
                attributeName="transform"
                dur="1s"
                from="0 18 18"
                repeatCount="indefinite"
                to="360 18 18"
                type="rotate"
              />
            </path>
          </g>
        </g>
      </svg>
    </span>
  </form>
</div>
`;

exports[`Common widget tests (Vue InstantSearch) > SortBy widget common tests > options > renders with props 1`] = `
<div
  class="ais-SortBy"
>
  <select
    aria-label="Sort results by"
    class="ais-SortBy-select"
  >
    <option
      class="ais-SortBy-option"
      value="instant_search"
    >
      Featured
    </option>
    <option
      class="ais-SortBy-option"
      value="instant_search_price_asc"
    >
      Price (asc)
    </option>
    <option
      class="ais-SortBy-option"
      value="instant_search_price_desc"
    >
      Price (desc)
    </option>
  </select>
</div>
`;

exports[`Common widget tests (Vue InstantSearch) > SortBy widget common tests > options > transform the passed items 1`] = `
<div
  class="ais-SortBy"
>
  <select
    aria-label="Sort results by"
    class="ais-SortBy-select"
  >
    <option
      class="ais-SortBy-option"
      value="instant_search"
    >
      FEATURED
    </option>
    <option
      class="ais-SortBy-option"
      value="instant_search_price_asc"
    >
      PRICE (ASC)
    </option>
    <option
      class="ais-SortBy-option"
      value="instant_search_price_desc"
    >
      PRICE (DESC)
    </option>
  </select>
</div>
`;

exports[`Common widget tests (Vue InstantSearch) > Stats widget common tests > options > renders with 0 hits 1`] = `
<div
  class="ais-Stats"
>
  <span
    class="ais-Stats-text"
  >
    No results found in 0ms
  </span>
</div>
`;

exports[`Common widget tests (Vue InstantSearch) > ToggleRefinement widget common tests > options > renders checked when the attribute is refined 1`] = `
<div
  class="ais-ToggleRefinement"
>
  <label
    class="ais-ToggleRefinement-label"
  >
    <input
      class="ais-ToggleRefinement-checkbox"
      type="checkbox"
    />
    <span
      class="ais-ToggleRefinement-labelText"
    >
      free_shipping
    </span>
  </label>
</div>
`;

exports[`Common widget tests (Vue InstantSearch) > ToggleRefinement widget common tests > options > renders with custom label 1`] = `
<div
  class="ais-ToggleRefinement"
>
  <label
    class="ais-ToggleRefinement-label"
  >
    <input
      class="ais-ToggleRefinement-checkbox"
      type="checkbox"
    />
    <span
      class="ais-ToggleRefinement-labelText"
    >
      Free Shipping!
    </span>
  </label>
</div>
`;

exports[`Common widget tests (Vue InstantSearch) > ToggleRefinement widget common tests > options > renders with props 1`] = `
<div
  class="ais-ToggleRefinement"
>
  <label
    class="ais-ToggleRefinement-label"
  >
    <input
      class="ais-ToggleRefinement-checkbox"
      type="checkbox"
    />
    <span
      class="ais-ToggleRefinement-labelText"
    >
      free_shipping
    </span>
  </label>
</div>
`;
